feat(worker): implement fffprobe worker
